<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:text="@string/thong_ke_hom_nay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:background="@color/Orange1"
        android:textStyle="bold"
        android:padding="6dp"
        android:id="@+id/tvTitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:background="@drawable/red_button"
            android:id="@+id/btchi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tong_chi"
            android:layout_weight="1"
            android:textSize="15dp"
            style="@style/button_text" />
        <Button
            android:background="@drawable/red_button"
            android:id="@+id/btthu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tong_thu"
            android:textSize="15dp"
            android:layout_weight="1"
            style="@style/button_text" />
</LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:id="@+id/listViewhienthithongke"/>

</LinearLayout>
